# FastAPI

./: README.md  alembic.ini  main.py  pyproject.toml  remember.txt
FastAPI/: remember.txt
FastAPI/alembic/versions/: 21e3f83c6140_.py
FastAPI/api/: courses.py  users.py
FastAPI/api/utils/: courses.py  users.py
FastAPI/pydantic_schemas/: course.py
Selenium/: main.py
SnScrape/: snscrape.ipynb
alembic/versions/: 21e3f83c6140_.py  5051472102a6_moving_is_active_to_user_table.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
