[tool.poetry]
name = "fast api"
version = "0.1.0"
description = ""
authors = ["joshuaati <joshuaati97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydentic = "^0.0.1.dev3"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.39.0"
alembic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
